feat: add 'next' option to /play command (#91)
Adds an optional 'next' boolean parameter to insert songs at the front
of the queue instead of the end. When enabled, the song will play
immediately after the current track finishes.

Inspired by PR #65 (https://github.com/lazaroagomez/BeatDock/pull/65)

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,7 +3,9 @@
     "NO_RESULTS": "No results found for your query.",
     "NO_PERMISSION": "You don't have permission to use this bot.",
     "SONG_ADDED": "Added **{0}** to the queue.",
+    "SONG_ADDED_NEXT": "Added **{0}** to play next.",
     "PLAYLIST_ADDED": "Added playlist **{0}** to the queue.",
+    "PLAYLIST_ADDED_NEXT": "Added playlist **{0}** to play next.",
     "NOTHING_PLAYING": "There is nothing currently playing.",
     "SONG_SKIPPED": "Skipped the current song.",
     "STOPPED_PLAYBACK": "Stopped playback and cleared the queue.",
