--- a/locales/es.json
+++ b/locales/es.json
@@ -3,7 +3,9 @@
     "NO_RESULTS": "No se encontraron resultados para tu búsqueda.",
     "NO_PERMISSION": "No tienes permiso para usar este bot.",
     "SONG_ADDED": "Añadido **{0}** a la cola.",
+    "SONG_ADDED_NEXT": "Añadido **{0}** para reproducir a continuación.",
     "PLAYLIST_ADDED": "Añadida la lista de reproducción **{0}** a la cola.",
+    "PLAYLIST_ADDED_NEXT": "Añadida la lista de reproducción **{0}** para reproducir a continuación.",
     "NOTHING_PLAYING": "No hay nada reproduciéndose actualmente.",
     "SONG_SKIPPED": "Se saltó la canción actual.",
     "STOPPED_PLAYBACK": "Se detuvo la reproducción y se limpió la cola.",
