--- a/locales/tr.json
+++ b/locales/tr.json
@@ -3,7 +3,9 @@
     "NO_RESULTS": "Aradığın müzik için sonuç bulunamadı.",
     "NO_PERMISSION": "Bu botu kullanmak için yeterli izniniz yok.",
     "SONG_ADDED": "**{0}** kuyruğa eklendi.",
+    "SONG_ADDED_NEXT": "**{0}** sıradaki olarak eklendi.",
     "PLAYLIST_ADDED": " **{0}** Çalma listesi kuyruğuna eklendi.",
+    "PLAYLIST_ADDED_NEXT": "**{0}** çalma listesi sıradaki olarak eklendi.",
     "NOTHING_PLAYING": "Şu anda çalan bir şey yok.",
     "SONG_SKIPPED": "Mevcut şarkı atlandı.",
     "STOPPED_PLAYBACK": "Müzik durduruldu ve Çalma listesi temizlendi.",
